# MagnusChessX

./: .clangd  .gitignore  LICENSE  README.MD  compile_flags.txt
Assets/Epds/: ImbalancedOpenings.epd  PawnMassEndgames.epd  QuietOpenings.epd
Notes/: MNUE_P2_TRAINER.md  MNUE_V2_ENGINE.md  MNUE_V2_FORMAT.md  MNUE_V2_RECKLESS_COMPARISON.md  MNUE_X2_K16_PAWN_Q8_A384.md
Src/: Common.h  History.cpp  History.h  HistoryContext.h  Lmr.h  Main.cpp  Makefile  Memory.h  MovePicker.h  Nmp.h  Nnue.cpp  Nnue.h  NnueLayout.h  Search.cpp  Search.h  See.h  TT.h  Tables.h  Time.h  Tuning.h  Types.h  Uci.cpp  Uci.h
Src/board/: Attack.cpp  Attack.h  MoveGen.cpp  MoveGen.h  Position.cpp  Position.h
Src/mnue/: Mnue.cpp  Mnue.h  MnueEmbedded.S  MnueV2Features.cpp  MnueV2Network.cpp  MnueX1Features.h  MnueX1Network.cpp  MnueX2Network.cpp
Src/search/: History.cpp  History.h  Lmr.cpp  Lmr.h  MovePicker.cpp  MovePicker.h  Nmp.cpp  Nmp.h  Search.cpp  Search.h  See.cpp  See.h  TT.cpp  TT.h  Time.cpp  Time.h  Tuning.h
Src/tests/: SearchReferenceTests.cpp  TimeManagementTests.cpp
Tools/: sync_p2pro_mnue.py  time_management_smoke.py  tt_trust_bootstrap.py
Tools/mnue_binpack_loader/: Cargo.toml
Tools/mnue_binpack_loader/src/: lib.rs
Tools/mnue_data_schedule/: Cargo.toml
Tools/mnue_data_schedule/src/: lib.rs
Tools/mnue_p2_trainer/: Cargo.toml
Tools/mnue_p2_trainer/src/: main.rs
Tools/mnue_v2_trainer/: Cargo.toml
Tools/mnue_v2_trainer/src/: board.rs  cli.rs  config.rs  dataset.rs  main.rs  stats.rs
Tools/mnue_v2_trainer/src/features/: mod.rs  position.rs
Tools/mnue_x1_trainer/: Cargo.toml
Tools/mnue_x1_trainer/src/: main.rs
Tools/mnue_x2_trainer/: Cargo.toml
Tools/mnue_x2_trainer/src/: k16.rs  main.rs
docs/: MNUE_P2_TRAINER.md  MNUE_V2_ENGINE.md  MNUE_V2_RECKLESS_COMPARISON.md  MNUE_X1_DESIGN.md  MNUE_X2_K16_PAWN_Q8_A384.md
src/: Common.h  Lmr.cpp  Main.cpp  Makefile  Memory.h  Nmp.h  Nnue.cpp  Search.cpp  Search.h  See.cpp  TT.cpp  TT.h  Time.cpp  Time.h  Uci.cpp
src/board/: Attack.cpp  Attack.h  Position.cpp
src/mnue/: Mnue.cpp  Mnue.h  MnueV2Features.h  MnueV2Network.h  MnueV2Telemetry.cpp  MnueV2Telemetry.h  MnueX1Features.cpp  MnueX1Network.h  MnueX2K16PawnNetwork.cpp  MnueX2K16PawnNetwork.h  MnueX2Network.h
src/syzygy/: Syzygy.cpp  Syzygy.h
tools/: sync_p2pro_mnue.py
tools/mnue_p2_trainer/: Cargo.toml
tools/mnue_p2_trainer/src/: main.rs
tools/mnue_v2_trainer/: Cargo.toml
tools/mnue_v2_trainer/fixtures/: mnue_v2_golden_int8.txt
tools/mnue_v2_trainer/src/: buckets.rs  checkpoint.rs  cli.rs  config.rs  dataset.rs  export.rs  lib.rs  main.rs  model.rs
tools/mnue_v2_trainer/src/features/: attack.rs  structure.rs
tools/mnue_x1_trainer/: Cargo.toml
tools/mnue_x1_trainer/src/: main.rs
tools/mnue_x2_trainer/: Cargo.toml
tools/mnue_x2_trainer/src/: k16.rs  main.rs
