[package]
name = "mnue_v2_trainer"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
publish = false

[features]
default = []
cuda = ["bullet_lib/cuda", "bullet-trainer/cuda", "bullet-gpu/cuda"]

[dependencies]
bullet_lib = { path = "D:/bullet/crates/bullet_lib" }
bullet-trainer = { path = "D:/bullet/crates/trainer" }
bullet-gpu = { path = "D:/bullet/crates/gpu" }
bullet-compiler = { path = "D:/bullet/crates/compiler" }
bulletformat = "1.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

