[package]
name = "mnue_x2_trainer"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
publish = false

[features]
default = []
cuda = ["bullet_lib/cuda"]

[dependencies]
bullet_lib = { path = "D:/bullet/crates/bullet_lib" }
bullet-trainer = { path = "D:/bullet/crates/trainer" }
bullet-gpu = { path = "D:/bullet/crates/gpu" }
bullet-compiler = { path = "D:/bullet/crates/compiler" }
bulletformat = "1.8.0"

